# valorant-discord-bot

./: Cargo.toml  helper.mjs  index.js  main.rs  methods.js  shard.js
commands/buttons/: autoroles.js  mmr.js  stats.js
commands/context/: UpdateUser.js
commands/normal/: stats.js
commands/select/: mmr.js
commands/slash/: mmr.js  stats.js  status.js
commands/slash_commands/: agent.rs  api.rs
jobs/: agent.rs
methods/: buildGameImage.js  buildStatsImage.js  fetchWebsite.js  http_error_handler.rs  patchGuild.js  patchStats.js
routes/: rso.js
structs/: database.rs  http_clients.rs  image.rs  metadata.rs  methods.rs  mod.rs  test.rs
