[package]
name = "valorant_labs"
version = "8.0.0"
edition = "2021"

[dependencies]
serenity = {version = "0.12", default-features = true}
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
mongodb = "3"
log="0.4"
clap={version = "4.5", features = ["derive"]}
lazy_static = "1.4"
dotenv = "0.15.0"
env_logger="0.11"
valorant-assets-api="0.1.5"
reqwest= "0.12.8"
image = "0.25.2"
imageproc = "0.25.0"
ab_glyph = "0.2"
chrono = "0.4"
serde_path_to_error = "0.1"
poise = "0.6.1"

[[bin]]
name = "bot"
path = "main.rs"

[package.metadata.scripts]
canary = "cargo run --env=canary"
deploy_canary = "echo Goodbye --env=canary --deploy"